--- a/views/join-the-club.ejs
+++ b/views/join-the-club.ejs
@@ -6,10 +6,9 @@
     <title>Join the Club</title>
     <link href="/styles.css" rel="stylesheet" />
   </head>
-  <body>
-    <main
-      class="flex justify-center items-center text-center min-h-screen bg-gradient-to-r from-teal-900 to-emerald-500"
-    >
+  <body class="bg-gradient-to-r from-teal-900 to-emerald-500">
+    <%- include('partials/header') %>
+    <main class="flex justify-center text-center mt-20">
       <div class="flex flex-col justify-center bg-zinc-700 w-xl p-10">
         <h1>Enter the Correct Password to Become a Member of the Cluuuub!</h1>
         <form
