--- a/views/log-in.ejs
+++ b/views/log-in.ejs
@@ -35,9 +35,9 @@
             >
           </div>
 
-          <% if(error && error.length > 0){%>
+          <% if(errors && errors.length > 0){%>
           <section class="md:w-2xl">
-            <p class="text-red-500"><%= error[0] %></p>
+            <p class="text-red-500"><%= errors[0] %></p>
           </section>
           <%} %>
         </form>
