fix(ui): fix responsiveness of messages

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
   <%- include('partials/header') %>
   <body class="bg-zinc-800">
     <main class="flex justify-center">
-      <div class="w-1/2 px-10 py-5">
+      <div class="w-200 px-10 py-5">
         <section>
           <form
             action="/add-message"
